EDU-1183 Support notifications removal

--- a/src/components/default-page-footer.less
+++ b/src/components/default-page-footer.less
@@ -1,6 +1,6 @@
 .DefaultPageFooter {
   width: 100%;
-  .m-page-content;
+  .m-footer-content;
   flex: none;
   display: flex;
   flex-wrap: wrap;
@@ -8,6 +8,7 @@
   justify-content: center;
   position: relative;
   z-index: @edu-z-index-base-layer;
+  line-height: 2 * @edu-font-size-base;
   background-color: @edu-background-color-footer;
 }
 
