--- a/src/components/navigation-desktop.less
+++ b/src/components/navigation-desktop.less
@@ -74,6 +74,10 @@
   align-items: baseline;
   grid-auto-flow: column;
   gap: @edu-control-spacing-wide;
+
+  .ant-badge-count {
+    font-size: @edu-font-size-xs !important;
+  }
 }
 
 .NavigationDesktop-anonymousUser {
