--- a/src/components/navigation-mobile.less
+++ b/src/components/navigation-mobile.less
@@ -46,6 +46,10 @@
   grid-auto-flow: column;
   gap: @edu-content-padding;
   padding: 10px 0;
+
+  .ant-badge-count {
+    font-size: @edu-font-size-xs !important;
+  }
 }
 
 .NavigationMobile-drawerLanguageItem {
