--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -6,6 +6,11 @@
   }
 }
 
+.m-footer-content {
+  .m-page-content;
+  margin-top: @edu-page-content-padding;
+}
+
 .m-fullscreen {
   padding-bottom: 20vh;
 }
