EDU-1155 Fix room documents sorting hopefully for good

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -65,6 +65,10 @@
     background-color: @edu-background-color-light;
   }
 
+  &.is-hidden {
+    display: none;
+  }
+
   &.is-other-dragged {
     opacity: 0.60;
 
