EDU-1189 Update audio-waveform plugin editor for easier use

--- a/src/plugins/audio-waveform/audio-waveform.less
+++ b/src/plugins/audio-waveform/audio-waveform.less
@@ -41,33 +41,60 @@
   width: auto !important;
 }
 
-.AudioWaveformGeneratorDialog-content {
+.AudioWaveformGeneratorDialog-body {
   display: grid;
-  gap: 40px;
+  gap: 50px;
   grid-template-columns: 1.5fr 1fr;
 
   @media @edu-media-phone {
     grid-template-columns: auto;
     grid-auto-flow: rows;
+    gap: 15px;
   }
 }
 
+.AudioWaveformGeneratorDialog-bodyColumn {
+  display: flex;
+  flex-direction: column;
+}
+
 .AudioWaveformGeneratorDialog-dropzone {
-  .m-control-border-base;
-  padding: 10px;
+  .m-dropzone;
+  flex: 1 0 auto;
+  display: grid;
 
   &.is-dropping {
-    .m-dropzone;
     .m-dropzone-active;
   }
 
   &.is-drop-rejected {
-    .m-dropzone;
     .m-dropzone-error;
   }
 }
 
-.AudioWaveformGeneratorDialog-previewArea {
+.AudioWaveformGeneratorDialog-dropzoneContent {
+  display: grid;
+  padding: @edu-content-padding;
+  align-content: space-around;
+}
+
+
+.AudioWaveformGeneratorDialog-dropzoneContentDivider {
+  min-width: 80%;
+}
+
+.AudioWaveformGeneratorDialog-spin {
+  display: grid;
+  align-content: center;
+  justify-content: center;
+  background-color: fade(@edu-background-color-light, 60%);
+}
+
+.AudioWaveformGeneratorDialog-generatedWaveform {
+  flex: 1 0 auto;
+}
+
+.AudioWaveformGeneratorDialog-generatedWaveformImage {
   height: 250px;
   background-size: contain;
   background-position: center;
@@ -77,7 +104,7 @@
   justify-items: center;
 }
 
-.AudioWaveformGeneratorDialog-controls {
+.AudioWaveformGeneratorDialog-colorPickers {
   margin-top: 30px;
   display: grid;
   gap: @edu-control-spacing-wide;
