EDU-1189 Fix spinner

--- a/src/plugins/audio-waveform/audio-waveform.less
+++ b/src/plugins/audio-waveform/audio-waveform.less
@@ -78,12 +78,12 @@
   align-content: space-around;
 }
 
-
 .AudioWaveformGeneratorDialog-dropzoneContentDivider {
   min-width: 80%;
 }
 
-.AudioWaveformGeneratorDialog-spin {
+.AudioWaveformGeneratorDialog-generatingPeaksSpinner {
+  flex: 1 0 auto;
   display: grid;
   align-content: center;
   justify-content: center;
