--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -48,3 +48,25 @@
   padding: 3px;
   margin: 3px 3px 3px 12px;
 }
+
+.SearchPage-table {
+  .ant-table-thead th::before {
+    display: none;
+  }
+}
+
+.SearchPage-tableRow {
+  .ant-table-cell {
+    border-top: 1px solid @edu-border-color-base !important;
+    border-bottom: 1px solid transparent !important;
+  }
+
+  .ant-table-cell-row-hover {
+    border-top-color: @edu-border-color-base !important;
+    border-radius: 0 !important;
+  }
+
+  &:first-of-type .ant-table-cell {
+    border-top: none !important;
+  }
+}
