--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -159,3 +159,4 @@
 @import '../plugins/interactive-media/interactive-media.less';
 @import '../plugins/table-of-contents/table-of-contents.less';
 @import '../plugins/markdown-with-image/markdown-with-image.less';
+@import '../plugins/music-learning-block/music-learning-block.less';
