--- a/src/components/collapsible.less
+++ b/src/components/collapsible.less
@@ -1,12 +1,12 @@
 @collapsible-padding: 16px;
-@collapsible-header-green-background-color: #d3ffde;
-@collapsible-header-green-border-color: darken(@collapsible-header-green-background-color, 10%);
-@collapsible-header-blue-background-color: #e8f2ff;
-@collapsible-header-blue-border-color: darken(@collapsible-header-blue-background-color, 8%);
-@collapsible-header-orange-background-color: #ffeed2;
-@collapsible-header-orange-border-color: darken(@collapsible-header-orange-background-color, 8%);
-@collapsible-header-red-background-color: #ffe0d0;
-@collapsible-header-red-border-color: darken(@collapsible-header-red-background-color, 8%);
+@collapsible-header-green-background-color: #DEE9BF;
+@collapsible-header-green-border-color: #D3DDB3;
+@collapsible-header-blue-background-color: #C5DCDD;
+@collapsible-header-blue-border-color: #BCD3D3;
+@collapsible-header-orange-background-color: #FECEA8;
+@collapsible-header-orange-border-color: #EAB896;
+@collapsible-header-red-background-color: #FFA1A1;
+@collapsible-header-red-border-color: #FFA1A1;
 
 .Collapsible {
   margin: 0 auto;
