EDU-1198 Small corrections

--- a/src/components/collapsible.less
+++ b/src/components/collapsible.less
@@ -6,7 +6,7 @@
 @collapsible-header-orange-background-color: #FECEA8;
 @collapsible-header-orange-border-color: #EAB896;
 @collapsible-header-red-background-color: #FFA1A1;
-@collapsible-header-red-border-color: #FFA1A1;
+@collapsible-header-red-border-color: #ED9191;
 
 .Collapsible {
   margin: 0 auto;
