EDU-1197 Create new media library redaction tab

--- a/src/components/resource-info-cell.less
+++ b/src/components/resource-info-cell.less
@@ -1,26 +1,26 @@
-.DocumentInfoCell {}
+.ResourceInfoCell {}
 
-.DocumentInfoCell-infoContainer {
+.ResourceInfoCell-infoContainer {
   display: flex;
 }
 
-.DocumentInfoCell-infoContent {
+.ResourceInfoCell-infoContent {
   width: 100%;
   display: block;
   text-decoration: none;
 }
 
-.DocumentInfoCell-mainText {
+.ResourceInfoCell-mainText {
   font-size: 1.25em;
   font-weight: bold;
 }
 
-.DocumentInfoCell-description {
+.ResourceInfoCell-description {
   margin-top: 0.2em;
   color: fade(@edu-text-color, 80%);
 }
 
-.DocumentInfoCell-subtext {
+.ResourceInfoCell-subtext {
   margin-top: 0.75em;
   font-size: 0.9em;
   color: @edu-text-color-secondary;
