--- a/src/plugins/divider/divider.less
+++ b/src/plugins/divider/divider.less
@@ -26,7 +26,7 @@
   }
 
   &.DividerDisplay-line--dark {
-    background-color: @edu-black;
+    background-color: @edu-border-color-dark;
   }
 }
 
