--- a/src/plugins/music-learning-block/music-learning-block.less
+++ b/src/plugins/music-learning-block/music-learning-block.less
@@ -15,13 +15,7 @@
 @music-learning-block-color-scheme-blue-background-color: #C5DCDD;
 @music-learning-block-color-scheme-blue-border-color: #BCD3D3;
 
-@music-learning-block-icon-font-size: 1.5em;
-
 .MusicLearningBlockDisplay {}
-
-.MusicLearningBlockDisplay-typeIcon {
-  font-size: @music-learning-block-icon-font-size;
-}
 
 .MusicLearningBlockEditor {}
 
@@ -50,7 +44,7 @@
 
 .MusicLearningBlockEditor-typeRadioIcon {
   min-width: 25px;
-  font-size: @music-learning-block-icon-font-size;
+  font-size: 1.5em;
 }
 
 .MusicLearningBlockEditor-colorSchemeRadio {
