EDU-1196 Make trust logos configurable through admin settings

--- a/src/components/homepage/homepage-trust-footer.less
+++ b/src/components/homepage/homepage-trust-footer.less
@@ -1,4 +1,4 @@
-.HomepageSponsors {
+.HomepageTrustFooter {
   width: 100%;
   display: grid;
   gap: 15px;
@@ -12,13 +12,22 @@
   }
 }
 
-.HomepageSponsors-content {
+.HomepageTrustFooter-content {
   display: grid;
   gap: 30px;
   grid-auto-flow: column;
   place-items: center;
 }
 
-.HomepageSponsors-logo {
+.HomepageTrustFooter-logo {
   width: 150px;
+  height: 60px;
+}
+
+.HomepageTrustFooter-logoImage {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
