--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -92,6 +92,7 @@
 @import '../components/media-player/youtube-player.less';
 @import '../components/irreversible-actions-section.less';
 @import '../components/pages/connect-external-account.less';
+@import '../components/homepage/homepage-trust-footer.less';
 @import '../components/media-player/track-mixer-editor.less';
 @import '../components/admin/technical-maintenance-tab.less';
 @import '../components/homepage/homepage-document-cards.less';
