EDU-1204 Adjust resource-info-cell to provide dedicated info for subtext on case basis

--- a/src/components/redaction/redaction-documents-tab.less
+++ b/src/components/redaction/redaction-documents-tab.less
@@ -19,3 +19,9 @@
 .RedactionDocumentsTab-badges {
   .m-control-group;
 }
+
+.RedactionDocumentsTab-titleSubtext {
+  display: grid;
+  gap: 5px;
+  grid-auto-flow: row;
+}
