--- a/src/components/resource-info-cell.less
+++ b/src/components/resource-info-cell.less
@@ -1,18 +1,14 @@
 .ResourceInfoCell {}
 
-.ResourceInfoCell-infoContainer {
-  display: flex;
-}
-
-.ResourceInfoCell-infoContent {
+.ResourceInfoCell-content {
   width: 100%;
   display: block;
-  text-decoration: none;
 }
 
-.ResourceInfoCell-mainText {
+.ResourceInfoCell-title {
   font-size: 1.25em;
   font-weight: bold;
+  text-decoration: none;
 }
 
 .ResourceInfoCell-description {
