EDU-1204 Replace redaction documents columns

--- a/src/components/redaction/redaction-documents-tab.less
+++ b/src/components/redaction/redaction-documents-tab.less
@@ -25,3 +25,17 @@
   gap: 5px;
   grid-auto-flow: row;
 }
+
+.RedactionDocumentsTab-tags {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.RedactionDocumentsTab-tagsExpandLink {
+  font-size: 0.9em;
+  display: inline-block;
+  height: 20px;
+  padding: 3px;
+  margin: 3px 3px 3px 12px;
+}
