--- a/src/plugins/table-of-contents/table-of-contents.less
+++ b/src/plugins/table-of-contents/table-of-contents.less
@@ -1,4 +1,11 @@
-.TableOfContentsDisplay {}
+.TableOfContentsDisplay {
+  display: flex;
+}
+
+.TableOfContentsDisplay-content {
+  padding: 2 * @edu-content-padding;
+  background-color: @edu-background-color-light;
+}
 
 .TableOfContentsDisplay-text {
   margin-bottom: @edu-content-padding;
@@ -6,8 +13,9 @@
 
 .TableOfContentsDisplay-nodeList {
   padding: 0;
+  margin-bottom: 0;
   list-style: none;
-  font-size: @edu-font-size-base;
+  font-size: @edu-font-size-sm;
 }
 
 .TableOfContentsDisplay-node {
