EDU-1193 Add filter to rooms tag

--- a/src/components/dashboard/rooms-tab.less
+++ b/src/components/dashboard/rooms-tab.less
@@ -5,9 +5,14 @@
   margin-bottom: 20px;
 }
 
+.RoomsTab-filter {
+  max-width: 300px;
+}
+
 .RoomsTab-createRoomButton {
   display: block !important;
   margin-left: auto;
+  margin-bottom: @edu-page-content-padding;
 }
 
 .RoomsTab-roomsGroupHeadline {
