EDU-1210 Improve dashboard favorites management

--- a/src/components/dashboard/favorites-tab.less
+++ b/src/components/dashboard/favorites-tab.less
@@ -34,7 +34,13 @@
   position: relative;
 }
 
-.FavoritesTab-cardRemoveButton {
+.FavoritesTab-cardOverlay {
+  .m-mask;
+  background-color: @edu-white;
+  opacity: 0.6;
+}
+
+.FavoritesTab-favoriteStart {
   position: absolute;
   top: 4px;
   right: 4px;
