EDU-1208 Unify alert usages and colors

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -73,6 +73,23 @@
 @edu-outline-width: 2px;
 @edu-outline-color: @edu-primary-color-dark;
 @edu-outline-fade: 20%;
+// Colors - banners
+@edu-banner-red-background-color: #FFA1A1;
+@edu-banner-red-border-color: #ED9191;
+@edu-banner-orange-background-color: #FECEA8;
+@edu-banner-orange-border-color: #EAB896;
+@edu-banner-pink-background-color: #F4D6CC;
+@edu-banner-pink-border-color: #E2BCB5;
+@edu-banner-lila-background-color: #D9D4E8;
+@edu-banner-lila-border-color: #CCC7DD;
+@edu-banner-yellow-background-color: #F9ECB9;
+@edu-banner-yellow-border-color: #EFDFB1;
+@edu-banner-green-background-color: #DEE9BF;
+@edu-banner-green-border-color: #D3DDB3;
+@edu-banner-khaki-background-color: #D8D8D0;
+@edu-banner-khaki-border-color: #CCCCC4;
+@edu-banner-blue-background-color: #C5DCDD;
+@edu-banner-blue-border-color: #BCD3D3;
 
 // Animation
 @edu-animation-duration-slow: 0.3s;
