--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -7,7 +7,6 @@
 
 // React components
 @import '../components/info.less';
-@import '../components/alert.less';
 @import '../components/markdown.less';
 @import '../components/url-input.less';
 @import '../components/room-card.less';
@@ -24,6 +23,7 @@
 @import '../components/collapsible.less';
 @import '../components/pages/index.less';
 @import '../components/pages/login.less';
+@import '../components/custom-alert.less';
 @import '../components/color-picker.less';
 @import '../components/pdf-document.less';
 @import '../components/used-storage.less';
