EDU-1208 Unify border radius between noSearch and search screens

--- a/src/components/resource-selector/media-library/media-library-search-screen.less
+++ b/src/components/resource-selector/media-library/media-library-search-screen.less
@@ -14,6 +14,7 @@
 
 .MediaLibrarySearchScreen-filesViewer {
   border: 1px solid @edu-border-color-base;
+  border-radius: @edu-border-radius-base;
   overflow: hidden;
   position: relative;
 
