--- a/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
+++ b/src/components/resource-selector/wikimedia/wikimedia-search-screen.less
@@ -18,6 +18,7 @@
 .WikimediaSearchScreen-filesViewer {
   margin: @edu-content-padding 0;
   border: 1px solid @edu-border-color-base;
+  border-radius: @edu-border-radius-base;
   overflow: hidden;
   height: 100%;
 }
