EDU-1208 Increase alert icon size

--- a/src/components/custom-alert.less
+++ b/src/components/custom-alert.less
@@ -1,5 +1,5 @@
 .CustomAlert {
-  padding: 20px 16px;
+  padding: @edu-content-padding;
   border-radius: @edu-border-radius-base;
   border: none;
   min-height: 50px;
@@ -36,6 +36,6 @@
 }
 
 .CustomAlert-icon {
-  font-size: @edu-font-size-lg;
+  font-size: 1.5em;
   color: @edu-text-color !important;
 }
