EDU-1215 Improve favorite star visibility and placement

--- a/src/components/favorite-star.less
+++ b/src/components/favorite-star.less
@@ -2,8 +2,14 @@
   display: flex;
   height: 20px !important;
   align-items: center;
-}
 
-.FavoriteStar-rate {
-  color: @edu-secondary-color-dark !important;
+  .anticon {
+    color: @edu-disabled-color !important;
+  }
+
+  &.is-set {
+    .anticon {
+      color: @edu-secondary-color-dark !important;
+    }
+  }
 }
