--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -2,21 +2,14 @@
 
 .RoomPage-title {
   display: flex;
-  align-items: baseline;
-  margin: 0 0 0.5em 0;
-  padding: 0 0 0.25em 0;
-}
-
-.RoomPage-titleText {
-  flex: 1 0 0%;
+  padding-bottom: 5px;
   font-weight: bold;
-  margin: 0 2.5em 0 0;
-  color: @edu-text-color;
   font-size: @edu-heading-1-size;
 }
 
-.RoomPage-titleExtra {
-  flex: none;
+.RoomPage-titleStar {
+  margin-top: -5px;
+  margin-left: 5px;
 }
 
 .RoomPage-subtitle {
