--- a/src/components/profile-header.less
+++ b/src/components/profile-header.less
@@ -16,11 +16,16 @@
 }
 
 .ProfileHeader-displayName {
-  display: block;
+  display: flex;
   font-weight: bold;
   color: @edu-text-color;
   font-size: @edu-heading-1-size;
   line-height: 40px;
+}
+
+.ProfileHeader-star {
+  margin-top: -5px;
+  margin-left: 5px;
 }
 
 .ProfileHeader-organization {
