EDU-1213 Let users preview, update and create items in redaction view

--- a/src/components/redaction/redaction-media-library-tab.less
+++ b/src/components/redaction/redaction-media-library-tab.less
@@ -4,11 +4,12 @@
   margin-bottom: 40px;
   display: grid;
   gap: 15px;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr 1fr auto;
+  grid-template-rows: auto;
 
   @media @edu-media-phone {
     grid-template-columns: 100%;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: repeat(3, auto);
   }
 }
 
