EDU-1216 PRevent own admin role removal

--- a/src/components/admin/roles-select.less
+++ b/src/components/admin/roles-select.less
@@ -1,5 +1,4 @@
 .RolesSelect {
-
   &.RolesSelect--block {
     display: block;
     width: fit-content;
@@ -14,5 +13,12 @@
 
   &.RolesSelect--inline {
     display: inline-block;
+  }
+}
+
+.RolesSelect-tag {
+  &.is-disabled {
+    background-color: @edu-error-color;
+    cursor: not-allowed;
   }
 }
