EDU-1212 Sort out footer colors

--- a/src/components/homepage/homepage-trust-footer.less
+++ b/src/components/homepage/homepage-trust-footer.less
@@ -4,8 +4,8 @@
   gap: 15px;
   grid-auto-flow: row;
   place-items: center;
-  background-color: @edu-background-color-footer;
-  padding-top: @edu-page-content-padding;
+  padding: @edu-page-content-padding 0;
+  background-color: @edu-background-color-trust-footer;
 
   @media @edu-media-phone {
     padding: calc(@edu-page-content-padding / 2);
