--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -7,3 +7,5 @@
 @import url('./theme.less');
 @import url('./lato-font.less');
 @import url('./custom-components/homepage-template.less');
+
+@test-app-oer-presentation-background-color: #F8FBFE;
