EDU-1221 Support inverting site logo color

--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -7,4 +7,8 @@
   color: @edu-primary-color-light;
   font-size: @default-site-logo-font-size;
   line-height: 1.25 * @default-site-logo-font-size;
+
+  &.DefaultSiteLogo--inverted {
+    color: @edu-white;
+  }
 }
