--- a/src/components/pages/index.less
+++ b/src/components/pages/index.less
@@ -24,7 +24,7 @@
   flex: 1 0 auto;
   margin-right: 10px;
   margin-bottom: 10px;
-  color: @edu-text-color-secondary;
+  color: inherit;
 }
 
 .IndexPage-searchesTag {
