--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -19,6 +19,10 @@
   width: 60%;
   border-radius: 15px;
   border: 14px solid @edu-primary-color-light;
+
+  @media @edu-media-phone {
+    border-width: 7px;
+  }
 }
 
 .HomepageProjectPresentation-details {
