EDU-1212 Remove unnecessary cache busting query param from resource URL

--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('/images/homepage-video-icons.svg?v=2');
+  background-image: url('/images/homepage-video-icons.svg');
   background-repeat: no-repeat;
   background-size: contain;
 }
