--- a/src/components/dashboard/activities-tab.less
+++ b/src/components/dashboard/activities-tab.less
@@ -27,6 +27,8 @@
   }
 
   @media @edu-media-phone {
+    padding: 0 @edu-content-padding;
+
     .ant-timeline-item-label {
       display: none;
     }
@@ -34,7 +36,7 @@
     .ant-timeline-item-tail,
     .ant-timeline-item-head,
     .ant-timeline-item-content {
-      inset-inline-start: 0px !important;
+      inset-inline-start: 0 !important;
     }
   }
 }
