--- a/src/components/resource-selector/room-media/room-media-default-screen.less
+++ b/src/components/resource-selector/room-media/room-media-default-screen.less
@@ -1,61 +1,11 @@
 .RoomMediaDefaultScreen {
   height: 100%;
   display: grid;
-  grid-template-rows: auto 1fr auto auto;
+  grid-template-rows: 1fr auto auto;
   grid-template-columns: 100%;
 }
 
-.RoomMediaDefaultScreen-filesViewer {
-  margin: 20px 0;
-  border: 1px solid @edu-border-color-base;
-  border-radius: @edu-border-radius-base;
-  overflow: hidden;
-  position: relative;
-
-  & .ant-table-placeholder .ant-table-cell {
-    border: none;
-  }
-
-  &.is-dropping {
-    .m-dropzone;
-    .m-dropzone-active;
-  }
-
-  &.is-drop-rejected {
-    .m-dropzone;
-    .m-dropzone-error;
-  }
-}
-
-.RoomMediaDefaultScreen-filesViewerContent {
-  height: 100%;
-  overflow: auto;
-}
-
-.RoomMediaDefaultScreen-filesViewerOverlay {
-  .m-mask;
-  display: grid;
-  align-content: center;
-  justify-content: center;
-  background-color: fade(@edu-background-color-light, 60%);
-}
-
-.RoomMediaDefaultScreen-buttonsLine {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.RoomMediaDefaultScreen-buttonsLineItem {
-  margin-top: @edu-control-spacing-base;
-
-  &.RoomMediaDefaultScreen-buttonsLineItem--select {
-    min-width: 100px;
-  }
-}
-
-.RoomMediaDefaultScreen-locationInfo {
+.RoomMediaDefaultScreen-storageInfo {
   min-height: 40px;
   margin-bottom: 20px;
 }
