EDU-1219 Add upload functionality

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -125,6 +125,7 @@
 @import '../components/resource-selector/wikimedia/wikimedia-files-viewer.less';
 @import '../components/resource-selector/wikimedia/wikimedia-search-screen.less';
 @import '../components/resource-selector/room-media/room-media-files-viewer.less';
+@import '../components/resource-selector/room-media/room-media-upload-modal.less';
 @import '../components/resource-selector/room-media/room-media-upload-screen.less';
 @import '../components/resource-selector/room-media/room-media-preview-modal.less';
 @import '../components/resource-selector/room-media/room-media-default-screen.less';
