--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -293,6 +293,12 @@
   }
 }
 
+.m-content-headline {
+  font-size: @edu-heading-5-size;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
 .m-section-content {
   padding: @edu-content-padding 0;
 }
