--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -129,6 +129,18 @@
 .RoomPage-messageBoardMessageDate {
   font-style: italic;
   font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
+}
+
+.RoomPage-messageBoardMessageIcon {
+  display: flex;
+  justify-content: flex-end;
+  font-size: @edu-font-size-sm;
+  color: @edu-text-color-secondary;
+
+  &:hover {
+    cursor: help;
+  }
 }
 
 .RoomPage-messageBoardMessageText {
