--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -41,9 +41,7 @@
 }
 
 .DocPage-commentsSectionHeader {
-  font-size: @edu-heading-5-size;
-  font-weight: bold;
-  margin-bottom: 20px;
+  .m-content-headline;
 }
 
 .DocPage-badges {
