EDU-1230 Small and unrelated tweaks and corrections

--- a/test-app/src/custom-components/homepage-template.less
+++ b/test-app/src/custom-components/homepage-template.less
@@ -42,7 +42,7 @@
   height: 100%;
   display: grid;
   gap: @edu-content-padding;
-  place-content: start;
+  align-content: start;
   grid-auto-flow: row;
   margin: 15% auto 0 auto;
   max-width: @edu-content-width-narrow;
