EDU-1240 Remove focus and active states styling from action buttons

--- a/src/styles/utilities.less
+++ b/src/styles/utilities.less
@@ -147,9 +147,7 @@
     color: @edu-disabled-color !important;
   }
 
-  &:hover,
-  &:active,
-  &:focus {
+  &:hover {
     background-color: @edu-white !important;
   }
 
@@ -158,9 +156,7 @@
 .u-danger-action-button {
   .u-action-button;
 
-  &:hover,
-  &:active,
-  &:focus {
+  &:hover {
     color: @edu-error-color !important;
   }
 }
