EDU-1232 Remove unnecessary LESS calc

--- a/src/components/pages/doc.less
+++ b/src/components/pages/doc.less
@@ -23,7 +23,7 @@
   pointer-events: none;
 
   @media @edu-media-phone {
-    margin-bottom: calc(-@edu-page-content-padding / 2);
+    margin-bottom: -@edu-page-content-padding / 2;
   }
 }
 
