--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -121,7 +121,7 @@
 .RoomPage-messageBoardMessageHeadline {
   display: flex;
   justify-content: space-between;
-  padding: calc(@edu-content-padding / 2);
+  padding: @edu-content-padding / 2;
   background-color: @edu-background-color-base;
   border-top-left-radius: @edu-border-radius-base;
   border-top-right-radius: @edu-border-radius-base;
