--- a/src/components/homepage/homepage-trust-footer.less
+++ b/src/components/homepage/homepage-trust-footer.less
@@ -8,7 +8,7 @@
   background-color: @edu-background-color-trust-footer;
 
   @media @edu-media-phone {
-    padding: calc(@edu-page-content-padding / 2);
+    padding: @edu-page-content-padding / 2;
   }
 }
 
