EDU-1232 Undo parantheses removal when removing calc in LESS files

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -48,7 +48,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  padding: @edu-content-padding / 2;
+  padding: (@edu-content-padding / 2);
   display: @section-display-toolbar-display;
   justify-content: space-between;
   background-color: @edu-background-color-base;
