--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -2,7 +2,7 @@
   padding: @edu-page-content-padding;
 
   @media @edu-media-phone {
-    padding: @edu-page-content-padding / 2;
+    padding: (@edu-page-content-padding / 2);
   }
 }
 
