EDU-1245 Fork document page and add focus header to new version

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -31,6 +31,7 @@
 @import '../components/abc-notation.less';
 @import '../components/pages/search.less';
 @import '../components/image-editor.less';
+@import '../components/focus-header.less';
 @import '../components/document-card.less';
 @import '../components/grid-selector.less';
 @import '../components/control-panel.less';
@@ -40,6 +41,7 @@
 @import '../components/markdown-help.less';
 @import '../components/card-selector.less';
 @import '../components/action-button.less';
+@import '../components/pages/document.less';
 @import '../components/comments-panel.less';
 @import '../components/credits-footer.less';
 @import '../components/pages/register.less';
