EDU-1249 Make media library buttons type secondary

--- a/src/components/resource-selector/media-library/media-library-file-dropzone.less
+++ b/src/components/resource-selector/media-library/media-library-file-dropzone.less
@@ -17,6 +17,11 @@
   align-content: space-around;
 }
 
+.MediaLibraryFileDropzone-contentButton {
+  margin-top: @edu-content-padding;
+}
+
 .MediaLibraryFileDropzone-divider {
-  min-width: 80%;
+  width: 100%;
+  padding: @edu-content-padding;
 }
