EDU-1249 Display search screen in responsive manner

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -128,6 +128,7 @@
 @import '../components/resource-selector/room-media/room-media-upload-modal.less';
 @import '../components/resource-selector/room-media/room-media-upload-screen.less';
 @import '../components/resource-selector/room-media/room-media-preview-modal.less';
+@import '../components/resource-selector/media-library/media-library-options.less';
 @import '../components/resource-selector/room-media/room-media-default-screen.less';
 @import '../components/resource-selector/media-library/media-library-item-modal.less';
 @import '../components/resource-selector/media-library/media-library-search-screen.less';
