EDU-1249 Show media library metadata of initial url

--- a/src/components/resource-selector/shared/selected-resource-display.less
+++ b/src/components/resource-selector/shared/selected-resource-display.less
@@ -15,6 +15,11 @@
   font-size: @edu-font-size-sm;
 }
 
+.SelectedResourceDisplay-metadata {
+  font-size: @edu-font-size-sm;
+}
+
 .SelectedResourceDisplay-footer {
   font-size: @edu-font-size-sm;
+  margin-top: 30px;
 }
