EDU-1249 Make resource type selector an OR input

--- a/src/components/resource-selector/room-media/room-media-files-viewer.less
+++ b/src/components/resource-selector/room-media/room-media-files-viewer.less
@@ -53,9 +53,11 @@
 
 .RoomMediaFilesViewer-buttonsLineItem {
   margin-top: @edu-control-spacing-base;
+  width: 100%;
+  max-width: 500px;
 
   &.RoomMediaFilesViewer-buttonsLineItem--select {
-    min-width: 100px;
+    width: auto;
   }
 }
 
