EDU-1247 Correct music-accentuation styling in standalone mode

--- a/src/components/collapsible.less
+++ b/src/components/collapsible.less
@@ -86,6 +86,7 @@
     align-items: center;
     border: 1px solid @edu-border-color-light;
     border-radius: @edu-border-radius-base;
+    background-color: @edu-background-color-light;
 
     &.Collapsible-content--green {
       background-color: @edu-banner-green-background-color;
