EDU-1254 Improve message board display

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -127,6 +127,11 @@
   border-top-right-radius: @edu-border-radius-base;
 }
 
+.RoomPage-messageBoardOwnerInfo {
+  .m-info-card;
+  margin: 30px 0;
+}
+
 .RoomPage-messageBoardMessageHeadlineIcons {
   display: grid;
   gap: 5px;
