EDU-1249 Improve media library content positioning on mobile

--- a/src/components/resource-selector/media-library/media-library-options.less
+++ b/src/components/resource-selector/media-library/media-library-options.less
@@ -6,6 +6,7 @@
   @media @edu-media-phone {
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 }
 
@@ -34,7 +35,7 @@
     @media @edu-media-phone {
       display: block;
       width: 100%;
-      padding: @edu-content-padding;
+      padding: 0 @edu-content-padding;
     }
   }
 }
