EDU-1246 Eliminate page jump when entering document focus mode

--- a/src/components/focus-header.less
+++ b/src/components/focus-header.less
@@ -13,6 +13,7 @@
 
 .FocusHeader-content {
   display: grid;
+  min-height: 50px;
   align-items: center;
   justify-content: end;
   grid-auto-flow: column;
