EDU-1246 Add actions panel to document page

--- a/src/components/pages/document.less
+++ b/src/components/pages/document.less
@@ -14,16 +14,10 @@
   margin-bottom: 10px;
 }
 
-.DocumentPage-badge {
-  padding: 8px;
-  font-size: @edu-font-size-lg;
-  color: @edu-text-color-secondary;
-  background-color: @edu-background-color-base;
-  border-radius: 50%;
-}
-
-.DocumentPage-cloneButton {
-  background-color: @edu-background-color-base !important;
+.DocumentPage-actionsPanelWrapper {
+  & > * {
+    height: fit-content;
+  }
 }
 
 .DocumentPage-focusHeaderButton {
