EDU-1246 Show verified badge on document page in a different way

--- a/src/components/pages/document.less
+++ b/src/components/pages/document.less
@@ -8,10 +8,16 @@
   .m-content-headline;
 }
 
-.DocumentPage-badges {
-  .m-control-group;
-  justify-content: end;
-  margin-bottom: 10px;
+.DocumentPage-verifiedBadge {
+  display: flex;
+  position: fixed;
+  font-size: 23px;
+  justify-content: center;
+  width: @edu-control-height-lg;
+  height: @edu-control-height-lg;
+  color: @edu-primary-color-light;
+  background-color: @edu-white;
+  border-radius: @edu-border-color-base;
 }
 
 .DocumentPage-actionsPanelWrapper {
